--- a/src/app/bai2/bai2.component.html
+++ b/src/app/bai2/bai2.component.html
@@ -1,1 +1,7 @@
-<p>bai2 works!</p>
+<div style="text-align: center;">
+<h4>Bài 2</h4>
+<input type="number" [(ngModel)]="x" placeholder="Nhập x">
+<input type="number" [(ngModel)]="n" placeholder="Nhập n">
+<button *ngIf="x != null && n != null" (click)="bai2()">Tính</button>
+<div *ngIf="tong != 0">S(n) = {{tong}}</div>
+</div>
