--- a/src/app/bai3/bai3.component.html
+++ b/src/app/bai3/bai3.component.html
@@ -1,1 +1,3 @@
-<p>bai3 works!</p>
+<div style="text-align: center;">
+<p>Bài 3: Sắp xếp danh sách trên theo thứ tự tăng dần của trường họ tên</p>
+</div>
