--- a/src/app/bai1/bai1.component.html
+++ b/src/app/bai1/bai1.component.html
@@ -1,5 +1,7 @@
+<div style="text-align: center;">
 <h4>Bài 1</h4>
 <input type="number" [(ngModel)]="x" placeholder="Nhập x">
 <input type="number" [(ngModel)]="n" placeholder="Nhập n">
 <button *ngIf="x != null && n != null" (click)="bai1()">Tính</button>
 <div *ngIf="tong != 0">S(n) = {{tong}}</div>
+</div>
